@@ -79,6 +79,7 @@ SINGLEMODULE_SOURCES= \
 	type_loop.m \
 	type_mismatch.m \
 	type_vars.m \
+	typeclass_bogus_method.m \
 	typeclass_mode.m \
 	typeclass_test_1.m \
 	typeclass_test_2.m \
