@@ -4,5 +4,5 @@ tc_err1.m:028: In instance declaration for `tc_err1:actions(tc_err1:pstate)':
 tc_err1.m:028:   no implementation for type class predicate method
 tc_err1.m:028:   `tc_err1:handle_typedefs/3'.
 tc_err1.m:028: In instance declaration for `tc_err1:actions/1': incorrect
-tc_err1.m:028:   method name(s).
+tc_err1.m:028:   method name(s): predicate `tc_err1:handle_typedefs/2' .
 For more information, try recompiling with `-E'.
