@@ -2,5 +2,5 @@ tc_err2.m:034: In instance declaration for `tc_err2:actions(tc_err2:pstate)':
 tc_err2.m:034:   no implementation for type class predicate method
 tc_err2.m:034:   `tc_err2:handle_typedefs/3'.
 tc_err2.m:034: In instance declaration for `tc_err2:actions/1': incorrect
-tc_err2.m:034:   method name(s).
+tc_err2.m:034:   method name(s): predicate `tc_err2:handle_typedefs/2' .
 For more information, try recompiling with `-E'.
