@@ -3,8 +3,6 @@ typeclass_test_5.m:015:   multiple implementations of type class predicate
 typeclass_test_5.m:015:   method `typeclass_test_5:p/1'.
 typeclass_test_5.m:016: First definition appears here.
 typeclass_test_5.m:017: Subsequent definition appears here.
-typeclass_test_5.m:015: In instance declaration for `typeclass_test_5:c2/1':
-typeclass_test_5.m:015:   incorrect method name(s).
 typeclass_test_5.m:015: In instance declaration for `typeclass_test_5:c2(int)':
 typeclass_test_5.m:015:   superclass constraint(s) not satisfied:
 typeclass_test_5.m:015:   `typeclass_test_5:c1(int)'.
