@@ -14,7 +14,9 @@ typeclass_test_9.m:010: Error: multiply defined (or overlapping) instance
 typeclass_test_9.m:010: declarations for class `typeclass_test_9:foo/1'.
 typeclass_test_9.m:007: Previous instance declaration was here.
 typeclass_test_9.m:013: In instance declaration for `typeclass_test_9:bar/1':
-typeclass_test_9.m:013:   incorrect method name(s).
+typeclass_test_9.m:013:   incorrect method name(s): predicate
+typeclass_test_9.m:013:   `typeclass_test_9:p/0' .
 typeclass_test_9.m:018: In instance declaration for `typeclass_test_9:baz/1':
-typeclass_test_9.m:018:   incorrect method name(s).
+typeclass_test_9.m:018:   incorrect method name(s): predicate
+typeclass_test_9.m:018:   `typeclass_test_9:r/0' .
 For more information, try recompiling with `-E'.
